# kasumi-unicode

./: AUTHORS  ChangeLog  ChangeLog.2.5  INSTALL  KasumiAddWindow.cxx  KasumiAddWindow.hxx  KasumiConfiguration.cxx  KasumiConfiguration.hxx  KasumiDic.cxx  KasumiDic.hxx  KasumiDicEventListener.hxx  KasumiException.cxx  KasumiException.hxx  KasumiMainWindow.cxx  KasumiMainWindow.hxx  KasumiString.cxx  KasumiString.hxx  KasumiWord.cxx  KasumiWord.hxx  KasumiWordEventListener.hxx  KasumiWordType.cxx  KasumiWordType.hxx  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  cellrendererspin.c  cellrendererspin.h  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  kasumi.1  kasumi.desktop.in  (+1 more)
glade/: README  README~  kasumiwindowproto.glade  kasumiwindowproto.gladep.bak
glade/src/: interface.c  interface.c.bak  interface.h.bak
intl/: Makefile
m4/: ChangeLog  Makefile  Makefile.in
po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  it.po  ja.gmo  ja.po  kasumi.pot
