dnl Process this file with autoconf to produce a configure script.
AC_INIT(main.cxx)
AM_INIT_AUTOMAKE(kasumi, 1.0)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX

dnl Checks for gettext
ALL_LINGUAS="ja"
AM_GNU_GETTEXT
LDFLAGS="$LDFLAGS $INTLLIBS"
localedir='${prefix}/share/locale'
AC_SUBST(localedir)
AC_DEFINE(HAVE_CATGETS, 1,Define as 1 if you have catgets and don't want to use GNU gettext.)
AC_DEFINE(HAVE_GETTEXT, 1, Define as 1 if you have GNU gettext.)
AC_DEFINE(HAVE_LC_MESSAGES, 1, Define as 1 if you have LC_MESSAGES.)
AC_DEFINE(HAVE_STPCPY, 1, Define as 1 if you have stpcpy() function.)
AC_DEFINE(ENABLE_NLS, 1, Define as 1 if you want to use NLS.)

dnl Checks for libraries.
AM_PATH_GTK_2_0(2.4.0, CFLAGS="$CFLAGS $GTK_CFLAGS" CPPFLAGS="$CPPFLAGS $GTK_CFLAGS" LIBS="$LIBS $GTK_LIBS", AC_MSG_ERROR(GTK+ 2.0 not found.))
AC_CHECK_LIB(iconv, iconv)
AC_CHECK_LIB(anthydic, anthy_dic_util_init)
AC_CHECK_LIB(anthy, anthy_get_version_string)

CFLAGS="$CFLAGS -Wall"
CXXFLAGS="$CXXFLAGS -Wall"

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile intl/Makefile po/Makefile.in m4/Makefile )

