dnl Process this file with autoconf to produce a configure script.
AC_INIT(main.cxx, 2.0)
AM_INIT_AUTOMAKE(kasumi, 2.5)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX

dnl Checks for gettext
ALL_LINGUAS="ja it"
AM_GNU_GETTEXT

dnl LDFLAGS="$LDFLAGS $INTLLIBS"
dnl localedir='${prefix}/share/locale'
dnl AC_SUBST(localedir)
dnl AC_DEFINE(HAVE_CATGETS, 1,Define as 1 if you have catgets and don't want to use GNU gettext.)
dnl AC_DEFINE(HAVE_GETTEXT, 1, Define as 1 if you have GNU gettext.)
dnl AC_DEFINE(HAVE_LC_MESSAGES, 1, Define as 1 if you have LC_MESSAGES.)
dnl AC_DEFINE(HAVE_STPCPY, 1, Define as 1 if you have stpcpy() function.)
dnl AC_DEFINE(ENABLE_NLS, 1, Define as 1 if you want to use NLS.)

AM_ICONV

if test "x$am_cv_func_iconv" != "xyes"; then
	AC_MSG_ERROR([Unable to find iconv(). iconv() is needed for Kasumi])
fi

dnl Checks for libraries.
AM_PATH_GTK_2_0(2.6.0, CFLAGS="$CFLAGS $GTK_CFLAGS" CPPFLAGS="$CPPFLAGS $GTK_CFLAGS" LIBS="$LIBS $GTK_LIBS", AC_MSG_ERROR(GTK+ >= 2.6.0 not found.))
AC_CHECK_LIB(iconv, iconv)
AC_CHECK_LIB(anthydic, anthy_dic_util_init)
AC_CHECK_LIB(anthy, anthy_get_version_string)

CFLAGS="$CFLAGS -Wall"
CXXFLAGS="$CXXFLAGS -Wall"

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CONFIG_FILES([
kasumi.desktop
])

AC_OUTPUT(Makefile intl/Makefile po/Makefile.in m4/Makefile )

